2006-02-13  David Bateman  <dbateman@free.fr>

	* Makefile.in (LINK_DEPS): Add missing dependencies on colamd,
	ccolamd and cxsparse 

2006-02-13  John W. Eaton  <jwe@octave.org>

	* kpse.cc (kpse_path_iterator::next): Reverse order of tests in
	while loop condition.
	(kpse_path_iterator::operator =): Declare as private function but
	don't define to prevent attempts to use assignment operator.
	Don't define ST_NLINK_TRICK for Cygwin systems.

2006-02-10  John W. Eaton  <jwe@octave.org>

	* mx-inlines.cc (MX_ND_REDUCTION): Store in cummulative
	product of all dimensions in CP_SZ.

2006-02-09  John W. Eaton  <jwe@octave.org>

	* mx-inlines.cc (MX_ND_CUMULATIVE_OP): Store in cummulative
	product of all dimensions in CP_SZ.

2006-02-09  David Bateman  <dbateman@free.fr>

        * SparseQR.cc: new file for real sparse QR class.
        * SparseQR.h: declaration.
        * SparseCmplxQR.cc: new file for complex sparse QR class.
        * SparseCmplxQR.h: declaration.
        * dSparse.cc (dinverse,tinverse,inverse): Remove unused input args.
        (factorize, fsolve): Enable code code lssolve.
        (lssolve): disable unused args, write based in above sparse QR class.
        * CSparse.cc (dinverse,tinverse,inverse): Remove unused input args.
        (factorize, fsolve): Enable code code lssolve.
        (lssolve): disable unused args, write based in above sparse QR class.
        * oct-sparse.h: fix location of colamd, ccolamd and metis headers.
        Include CXSparse headers.
        * Makefile.in (MATRIX_INC): Include SparseQR.h and SparseCmplxQR.h.
        (MATRIX_SRC): Include SparseQR.cc and SparseCmplxQR.cc.

2006-02-08  John W. Eaton  <jwe@octave.org>

	* Array-util.h (calc_permutated_idx): Delete.
	* Array.cc (permute_vector): New data structure.
	(permute_vector_compare): New function.
	(Array<T>::permute): Rewrite to avoid calc_permutated_index for
	improved performance.

2006-02-04  David Bateman  <dbateman@free.fr>
