@@ -54,7 +54,7 @@ static int Vkluge_procbuf_delay = 0;
 
 static octave_procbuf *octave_procbuf_list = 0;
 
-#if defined (__CYGWIN32__)
+#if defined (__CYGWIN__)
 #define W32POPEN popen
 #define W32PCLOSE pclose
 #elif defined (__MINGW32__)
@@ -65,7 +65,7 @@ static octave_procbuf *octave_procbuf_list = 0;
 octave_procbuf *
 octave_procbuf::open (const char *command, int mode)
 {
-#if defined (__CYGWIN32__) || defined (__MINGW32__)
+#if defined (__CYGWIN__) || defined (__MINGW32__)
 
   if (is_open ()) 
     return 0;
@@ -176,7 +176,7 @@ octave_procbuf::close (void)
 {
 
 
-#if defined (__CYGWIN32__) || defined (__MINGW32__)
+#if defined (__CYGWIN__) || defined (__MINGW32__)
 
   if (f)
     {
